[package]
name = "git-ctx"
version = "0.1.1"
edition = "2021"
description = "A git custom command to list and switch most recent branches"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.2", features=["derive"]}
log = "0.4.14"
